# viRust-locator

./: Cargo.toml  README.md  changelog.md  run_tests.sh
benches/: my_benchmark.rs
src/: config.rs  lib.rs  locator.rs  main.rs  prelude.rs  reference.rs
tests/: README.md  integration_tests.rs  performance_tests.rs
