[package]
name = "virust-locator"
version = "0.1.1"
edition = "2024"

[dependencies]
bio = "2"
clap = { version = "4.5.37", features = ["derive"] }
tap = "1"
serde = { version = "1.0", features = ["derive"] }
colored = "3"
rayon = "1.10.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
