[package]
name = "virust-locator"
version = "0.1.5"
edition = "2024"
authors = ["Shuntai Zhou <shuntai.zhou@gmail.com>"]
description = "A tool for generating sequence locators for HIV/SIV sequences, resembling the functionality of the LANL HIV-Locator tool."
license = "MIT"
repository = "https://github.com/ViralSeq/viRust-locator"
documentation = "https://docs.rs/virust-locator"
keywords = ["bioinformatics", "HIV", "sequence", "alignment"]
categories = ["science::bioinformatics::sequence-analysis","command-line-utilities"]
readme = "README.md"

[dependencies]
bio = "3.0.0"
clap = { version = "4.5.53", features = ["derive"] }
tap = "1"
serde = { version = "1.0.228", features = ["derive"] }
colored = "3"
rayon = "1.11.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
